@@ -46,241 +46,352 @@ import uk.gov.companieshouse.api.acsp_manage_users.model.AcspMembership;
 @Tag("unit-test")
 class AcspMembersServiceTest {
 
-    private final TestDataManager testDataManager = TestDataManager.getInstance();
+  private final TestDataManager testDataManager = TestDataManager.getInstance();
 
-    @Mock
-    private AcspMembersRepository acspMembersRepository;
+  @Mock private AcspMembersRepository acspMembersRepository;
 
-    @Mock
-    private AcspMembersMapper acspMembersMapper;
+  @Mock private AcspMembersMapper acspMembersMapper;
 
-    @Mock
-    private AcspMembershipListMapper acspMembershipListMapper;
+  @Mock private AcspMembershipListMapper acspMembershipListMapper;
 
-    @InjectMocks
-    private AcspMembersService acspMembersService;
+  @InjectMocks private AcspMembersService acspMembersService;
 
-    private User testUser;
-    private List<AcspMembersDao> testActiveAcspMembersDaos;
-    private List<AcspMembersDao> testAllAcspMembersDaos;
-    private List<AcspMembership> testAcspMemberships;
+  private User testUser;
+  private List<AcspMembersDao> testActiveAcspMembersDaos;
+  private List<AcspMembersDao> testAllAcspMembersDaos;
+  private List<AcspMembership> testAcspMemberships;
 
-    @BeforeEach
-    void setUp() {
-        testUser = new User();
-        testUser.setUserId("user123");
+  @BeforeEach
+  void setUp() {
+    testUser = new User();
+    testUser.setUserId("user123");
 
-        testActiveAcspMembersDaos = Arrays.asList(createAcspMembersDao("1", false));
-        testAllAcspMembersDaos =
-                Arrays.asList(createAcspMembersDao("1", false), createAcspMembersDao("2", true));
+    testActiveAcspMembersDaos = Arrays.asList(createAcspMembersDao("1", false));
+    testAllAcspMembersDaos =
+        Arrays.asList(createAcspMembersDao("1", false), createAcspMembersDao("2", true));
 
-        testAcspMemberships = Arrays.asList(new AcspMembership(), new AcspMembership());
-    }
+    testAcspMemberships = Arrays.asList(new AcspMembership(), new AcspMembership());
+  }
 
+  private ArgumentMatcher<Page<AcspMembersDao>> acspMembersDaoPageMatcher(
+      int pageNumber,
+      int itemsPerPage,
+      int totalElements,
+      int totalPages,
+      Set<String> expectedAcspIds) {
+    return page -> {
+      final var pageNumberIsCorrect = page.getNumber() == pageNumber;
+      final var itemsPerPageIsCorrect = page.getSize() == itemsPerPage;
+      final var totalElementsIsCorrect = page.getTotalElements() == totalElements;
+      final var totalPagesIsCorrect = page.getTotalPages() == totalPages;
+      final var contentIsCorrect =
+          page.getContent().stream()
+              .map(AcspMembersDao::getId)
+              .collect(Collectors.toSet())
+              .containsAll(expectedAcspIds);
+      return pageNumberIsCorrect
+          && itemsPerPageIsCorrect
+          && totalElementsIsCorrect
+          && totalPagesIsCorrect
+          && contentIsCorrect;
+    };
+  }
 
+  private ArgumentMatcher<AcspDataDao> acspDataDaoMatcher(
+      String acspId, String acspName, String acspStatus) {
+    return acsp -> {
+      final var acspIdIsCorrect = acspId.equals(acsp.getId());
+      final var acspNameIsCorrect = acspName.equals(acsp.getAcspName());
+      final var acspStatusIsCorrect = acspStatus.equals(acsp.getAcspStatus());
+      return acspIdIsCorrect && acspNameIsCorrect && acspStatusIsCorrect;
+    };
+  }
 
-    private ArgumentMatcher<Page<AcspMembersDao>> acspMembersDaoPageMatcher( int pageNumber, int itemsPerPage, int totalElements, int totalPages, Set<String> expectedAcspIds ){
-        return page -> {
-            final var pageNumberIsCorrect = page.getNumber() == pageNumber;
-            final var itemsPerPageIsCorrect = page.getSize() == itemsPerPage;
-            final var totalElementsIsCorrect = page.getTotalElements() == totalElements;
-            final var totalPagesIsCorrect = page.getTotalPages() == totalPages;
-            final var contentIsCorrect = page.getContent()
-                    .stream()
-                    .map( AcspMembersDao::getId )
-                    .collect(Collectors.toSet())
-                    .containsAll( expectedAcspIds );
-            return pageNumberIsCorrect && itemsPerPageIsCorrect && totalElementsIsCorrect && totalPagesIsCorrect && contentIsCorrect;
-        };
-    }
+  @Test
+  void fetchAcspMemberships_includeRemoved_returnsAllMemberships() {
+    when(acspMembersRepository.fetchAllAcspMembersByUserId(testUser.getUserId()))
+        .thenReturn(testAllAcspMembersDaos);
+    when(acspMembershipListMapper.daoToDto(testAllAcspMembersDaos, testUser))
+        .thenReturn(testAcspMemberships);
 
-    private ArgumentMatcher<AcspDataDao> acspDataDaoMatcher( String acspId, String acspName, String acspStatus ){
-        return acsp -> {
-            final var acspIdIsCorrect = acspId.equals( acsp.getId() );
-            final var acspNameIsCorrect = acspName.equals( acsp.getAcspName() );
-            final var acspStatusIsCorrect = acspStatus.equals( acsp.getAcspStatus() );
-            return acspIdIsCorrect && acspNameIsCorrect && acspStatusIsCorrect;
-        };
-    }
+    List<AcspMembership> result = acspMembersService.fetchAcspMemberships(testUser, true);
 
-    @Test
-    void fetchAcspMemberships_includeRemoved_returnsAllMemberships() {
-        when(acspMembersRepository.fetchAllAcspMembersByUserId(testUser.getUserId()))
-                .thenReturn(testAllAcspMembersDaos);
-        when(acspMembershipListMapper.daoToDto(testAllAcspMembersDaos, testUser))
-                .thenReturn(testAcspMemberships);
+    assertEquals(2, result.size());
+    assertSame(testAcspMemberships, result);
+    verify(acspMembersRepository).fetchAllAcspMembersByUserId(testUser.getUserId());
+    verify(acspMembershipListMapper).daoToDto(testAllAcspMembersDaos, testUser);
+    verifyNoMoreInteractions(acspMembersRepository, acspMembershipListMapper);
+  }
 
-        List<AcspMembership> result = acspMembersService.fetchAcspMemberships(testUser, true);
+  @Test
+  void fetchAcspMemberships_excludeRemoved_returnsOnlyActiveMemberships() {
+    when(acspMembersRepository.fetchActiveAcspMembersByUserId(testUser.getUserId()))
+        .thenReturn(testActiveAcspMembersDaos);
+    when(acspMembershipListMapper.daoToDto(testActiveAcspMembersDaos, testUser))
+        .thenReturn(Collections.singletonList(testAcspMemberships.getFirst()));
 
-        assertEquals(2, result.size());
-        assertSame(testAcspMemberships, result);
-        verify(acspMembersRepository).fetchAllAcspMembersByUserId(testUser.getUserId());
-        verify(acspMembershipListMapper).daoToDto(testAllAcspMembersDaos, testUser);
-        verifyNoMoreInteractions(acspMembersRepository, acspMembershipListMapper);
-    }
+    List<AcspMembership> result = acspMembersService.fetchAcspMemberships(testUser, false);
 
-    @Test
-    void fetchAcspMemberships_excludeRemoved_returnsOnlyActiveMemberships() {
-        when(acspMembersRepository.fetchActiveAcspMembersByUserId(testUser.getUserId()))
-                .thenReturn(testActiveAcspMembersDaos);
-        when(acspMembershipListMapper.daoToDto(testActiveAcspMembersDaos, testUser))
-                .thenReturn(Collections.singletonList(testAcspMemberships.get(0)));
+    assertEquals(1, result.size());
+    assertSame(testAcspMemberships.getFirst(), result.getFirst());
+    verify(acspMembersRepository).fetchActiveAcspMembersByUserId(testUser.getUserId());
+    verify(acspMembershipListMapper).daoToDto(testActiveAcspMembersDaos, testUser);
+    verifyNoMoreInteractions(acspMembersRepository, acspMembershipListMapper);
+  }
 
-        List<AcspMembership> result = acspMembersService.fetchAcspMemberships(testUser, false);
+  @Test
+  void fetchAcspMemberships_noMemberships_returnsEmptyList() {
+    when(acspMembersRepository.fetchActiveAcspMembersByUserId(testUser.getUserId()))
+        .thenReturn(Collections.emptyList());
+    when(acspMembershipListMapper.daoToDto(Collections.emptyList(), testUser))
+        .thenReturn(Collections.emptyList());
 
-        assertEquals(1, result.size());
-        assertSame(testAcspMemberships.get(0), result.get(0));
-        verify(acspMembersRepository).fetchActiveAcspMembersByUserId(testUser.getUserId());
-        verify(acspMembershipListMapper).daoToDto(testActiveAcspMembersDaos, testUser);
-        verifyNoMoreInteractions(acspMembersRepository, acspMembershipListMapper);
-    }
+    List<AcspMembership> result = acspMembersService.fetchAcspMemberships(testUser, false);
 
-    @Test
-    void fetchAcspMemberships_noMemberships_returnsEmptyList() {
-        when(acspMembersRepository.fetchActiveAcspMembersByUserId(testUser.getUserId()))
-                .thenReturn(Collections.emptyList());
-        when(acspMembershipListMapper.daoToDto(Collections.emptyList(), testUser))
-                .thenReturn(Collections.emptyList());
+    assertTrue(result.isEmpty());
+    verify(acspMembersRepository).fetchActiveAcspMembersByUserId(testUser.getUserId());
+    verify(acspMembershipListMapper).daoToDto(Collections.emptyList(), testUser);
+    verifyNoMoreInteractions(acspMembersRepository, acspMembershipListMapper);
+  }
 
-        List<AcspMembership> result = acspMembersService.fetchAcspMemberships(testUser, false);
+  @Test
+  void fetchAcspMemberships_repositoryThrowsException_propagatesException() {
+    when(acspMembersRepository.fetchActiveAcspMembersByUserId(anyString()))
+        .thenThrow(new RuntimeException("Database error"));
 
-        assertTrue(result.isEmpty());
-        verify(acspMembersRepository).fetchActiveAcspMembersByUserId(testUser.getUserId());
-        verify(acspMembershipListMapper).daoToDto(Collections.emptyList(), testUser);
-        verifyNoMoreInteractions(acspMembersRepository, acspMembershipListMapper);
-    }
+    assertThrows(
+        RuntimeException.class, () -> acspMembersService.fetchAcspMemberships(testUser, false));
+  }
 
-    @Test
-    void fetchAcspMemberships_repositoryThrowsException_propagatesException() {
-        when(acspMembersRepository.fetchActiveAcspMembersByUserId(anyString()))
-                .thenThrow(new RuntimeException("Database error"));
+  private AcspMembersDao createAcspMembersDao(String id, boolean removed) {
+    AcspMembersDao dao = new AcspMembersDao();
+    dao.setId(id);
+    dao.setRemovedBy(removed ? "remover" : null);
+    return dao;
+  }
 
-        assertThrows(
-                RuntimeException.class, () -> acspMembersService.fetchAcspMemberships(testUser, false));
-    }
+  @Test
+  void fetchAcspMembersWithMalformedRoleOrPageIndexOrItemsPerPageThrowsIllegalArgumentException() {
+    final var acspData = testDataManager.fetchAcspDataDaos("COMA001").getFirst();
 
-    private AcspMembersDao createAcspMembersDao(String id, boolean removed) {
-        AcspMembersDao dao = new AcspMembersDao();
-        dao.setId(id);
-        dao.setRemovedBy(removed ? "remover" : null);
-        return dao;
-    }
+    Assertions.assertThrows(
+        IllegalArgumentException.class,
+        () -> acspMembersService.fetchAcspMembers(acspData, true, null, "teacher", 0, 20));
+    Assertions.assertThrows(
+        IllegalArgumentException.class,
+        () -> acspMembersService.fetchAcspMembers(acspData, true, null, null, -1, 20));
+    Assertions.assertThrows(
+        IllegalArgumentException.class,
+        () -> acspMembersService.fetchAcspMembers(acspData, true, null, null, 0, -1));
+  }
 
+  @Test
+  void fetchAcspMembersWithMalformedAcspIdReturnsEmptyResults() {
+    Mockito.doReturn(Page.empty(PageRequest.of(0, 20)))
+        .when(acspMembersRepository)
+        .findAllByAcspNumberUserRolesAndUserIdLike(
+            anyString(), anySet(), anyString(), any(Pageable.class));
 
-    @Test
-    void fetchAcspMembersWithMalformedRoleOrPageIndexOrItemsPerPageThrowsIllegalArgumentException(){
-        final var acspData = testDataManager.fetchAcspDataDaos( "COMA001" ).getFirst();
+    final var malformedAcspId = new AcspDataDao();
+    malformedAcspId.setId("££££££");
+    acspMembersService.fetchAcspMembers(malformedAcspId, true, null, null, 0, 20);
+    Mockito.verify(acspMembersMapper)
+        .daoToDto(argThat(acspMembersDaoPageMatcher(0, 20, 0, 0, Set.of())), eq(malformedAcspId));
+  }
 
-        Assertions.assertThrows( IllegalArgumentException.class, () -> acspMembersService.fetchAcspMembers( acspData, true, null, "teacher", 0, 20 ) );
-        Assertions.assertThrows( IllegalArgumentException.class, () -> acspMembersService.fetchAcspMembers( acspData, true, null, null, -1, 20 ) );
-        Assertions.assertThrows( IllegalArgumentException.class, () -> acspMembersService.fetchAcspMembers( acspData, true, null, null, 0, -1 ) );
-    }
+  @Test
+  void fetchAcspMembersWithNullAcspDataThrowsNullPointerException() {
+    Assertions.assertThrows(
+        NullPointerException.class,
+        () -> acspMembersService.fetchAcspMembers(null, true, null, null, 0, 20));
+  }
 
-    @Test
-    void fetchAcspMembersWithMalformedAcspIdReturnsEmptyResults(){
-        Mockito.doReturn( Page.empty( PageRequest.of(0, 20) ) ).when( acspMembersRepository ).findAllByAcspNumberUserRolesAndUserIdLike( anyString(), anySet(), anyString(), any(Pageable.class) );
+  @Test
+  void fetchAcspMembersWithNullAcspNumberThrowsIllegalArgumentException() {
+    final var acspDataDao = new AcspDataDao();
+    Assertions.assertThrows(
+        IllegalArgumentException.class,
+        () -> acspMembersService.fetchAcspMembers(acspDataDao, true, null, null, 0, 20));
+  }
 
-        final var malformedAcspId = new AcspDataDao();
-        malformedAcspId.setId( "££££££" );
-        acspMembersService.fetchAcspMembers( malformedAcspId, true, null, null, 0, 20 );
-        Mockito.verify( acspMembersMapper ).daoToDto( argThat( acspMembersDaoPageMatcher( 0, 20, 0, 0, Set.of() ) ), eq( malformedAcspId ) );
-    }
+  @Test
+  void fetchAcspMembersWithNonexistentAcspIdReturnsEmptyResults() {
+    Mockito.doReturn(Page.empty(PageRequest.of(0, 20)))
+        .when(acspMembersRepository)
+        .findAllByAcspNumberUserRolesAndUserIdLike(
+            anyString(), anySet(), anyString(), any(Pageable.class));
 
-    @Test
-    void fetchAcspMembersWithNullAcspDataThrowsNullPointerException(){
-        Assertions.assertThrows( NullPointerException.class, () -> acspMembersService.fetchAcspMembers( null, true, null, null, 0, 20 ) );
-    }
+    final var nonexistentAcspId = new AcspDataDao();
+    nonexistentAcspId.setId("919191");
+    acspMembersService.fetchAcspMembers(nonexistentAcspId, true, null, null, 0, 20);
+    Mockito.verify(acspMembersMapper)
+        .daoToDto(argThat(acspMembersDaoPageMatcher(0, 20, 0, 0, Set.of())), eq(nonexistentAcspId));
+  }
 
-    @Test
-    void fetchAcspMembersWithNullAcspNumberThrowsIllegalArgumentException(){
-        final var acspDataDao = new AcspDataDao();
-        Assertions.assertThrows( IllegalArgumentException.class, () -> acspMembersService.fetchAcspMembers( acspDataDao, true, null, null, 0, 20 ) );
-    }
+  @Test
+  void fetchAcspMembersWithMalformedUserIdReturnsEmptyResults() {
+    final var acspData = testDataManager.fetchAcspDataDaos("COMA001").getFirst();
 
-    @Test
-    void fetchAcspMembersWithNonexistentAcspIdReturnsEmptyResults(){
-        Mockito.doReturn( Page.empty( PageRequest.of(0, 20) ) ).when( acspMembersRepository ).findAllByAcspNumberUserRolesAndUserIdLike( anyString(), anySet(), anyString(), any(Pageable.class) );
+    Mockito.doReturn(Page.empty(PageRequest.of(0, 20)))
+        .when(acspMembersRepository)
+        .findAllByAcspNumberUserRolesAndUserIdLike(
+            anyString(), anySet(), anyString(), any(Pageable.class));
 
-        final var nonexistentAcspId = new AcspDataDao();
-        nonexistentAcspId.setId( "919191" );
-        acspMembersService.fetchAcspMembers( nonexistentAcspId, true, null, null, 0, 20 );
-        Mockito.verify( acspMembersMapper ).daoToDto( argThat( acspMembersDaoPageMatcher( 0, 20, 0, 0, Set.of() ) ), eq( nonexistentAcspId ) );
-    }
+    acspMembersService.fetchAcspMembers(acspData, true, "££££", null, 0, 20);
+    Mockito.verify(acspMembersMapper)
+        .daoToDto(
+            argThat(acspMembersDaoPageMatcher(0, 20, 0, 0, Set.of())),
+            argThat(
+                acspDataDaoMatcher(
+                    acspData.getId(), acspData.getAcspName(), acspData.getAcspStatus())));
+  }
 
-    @Test
-    void fetchAcspMembersWithMalformedUserIdReturnsEmptyResults(){
-        final var acspData = testDataManager.fetchAcspDataDaos( "COMA001" ).getFirst();
+  @Test
+  void fetchAcspMembersWithNonexistentUserIdReturnsEmptyResults() {
+    final var acspData = testDataManager.fetchAcspDataDaos("COMA001").getFirst();
 
-        Mockito.doReturn( Page.empty( PageRequest.of(0, 20) ) ).when( acspMembersRepository ).findAllByAcspNumberUserRolesAndUserIdLike( anyString(), anySet(), anyString(), any(Pageable.class) );
+    Mockito.doReturn(Page.empty(PageRequest.of(0, 20)))
+        .when(acspMembersRepository)
+        .findAllByAcspNumberUserRolesAndUserIdLike(
+            anyString(), anySet(), anyString(), any(Pageable.class));
 
-        acspMembersService.fetchAcspMembers( acspData, true, "££££", null, 0, 20 );
-        Mockito.verify( acspMembersMapper ).daoToDto( argThat( acspMembersDaoPageMatcher( 0, 20, 0, 0, Set.of() ) ), argThat( acspDataDaoMatcher( acspData.getId(), acspData.getAcspName(), acspData.getAcspStatus() ) ) );
-    }
+    acspMembersService.fetchAcspMembers(acspData, true, "9191", null, 0, 20);
+    Mockito.verify(acspMembersMapper)
+        .daoToDto(
+            argThat(acspMembersDaoPageMatcher(0, 20, 0, 0, Set.of())),
+            argThat(
+                acspDataDaoMatcher(
+                    acspData.getId(), acspData.getAcspName(), acspData.getAcspStatus())));
+  }
 
-    @Test
-    void fetchAcspMembersWithNonexistentUserIdReturnsEmptyResults(){
-        final var acspData = testDataManager.fetchAcspDataDaos( "COMA001" ).getFirst();
+  @Test
+  void fetchAcspMembersAppliesAcspIdAndRoleAndIncludeRemovedFiltersCorrectly() {
+    final var acspData = testDataManager.fetchAcspDataDaos("COMA001").getFirst();
+    final var acspMemberDaos = testDataManager.fetchAcspMembersDaos("COM002", "COM010");
 
-        Mockito.doReturn( Page.empty( PageRequest.of(0, 20) ) ).when( acspMembersRepository ).findAllByAcspNumberUserRolesAndUserIdLike( anyString(), anySet(), anyString(), any(Pageable.class) );
+    final var pageRequest = PageRequest.of(0, 20);
+    final var page = new PageImpl<>(acspMemberDaos, pageRequest, acspMemberDaos.size());
 
-        acspMembersService.fetchAcspMembers( acspData, true, "9191", null, 0, 20 );
-        Mockito.verify( acspMembersMapper ).daoToDto( argThat( acspMembersDaoPageMatcher( 0, 20, 0, 0, Set.of() ) ), argThat( acspDataDaoMatcher( acspData.getId(), acspData.getAcspName(), acspData.getAcspStatus() ) ) );
-    }
+    Mockito.doReturn(page)
+        .when(acspMembersRepository)
+        .findAllByAcspNumberUserRolesAndUserIdLike(
+            anyString(), anySet(), anyString(), isNull(), any(Pageable.class));
 
-    @Test
-    void fetchAcspMembersAppliesAcspIdAndRoleAndIncludeRemovedFiltersCorrectly(){
-        final var acspData = testDataManager.fetchAcspDataDaos( "COMA001" ).getFirst();
-        final var acspMemberDaos = testDataManager.fetchAcspMembersDaos( "COM002", "COM010" );
+    acspMembersService.fetchAcspMembers(acspData, false, null, "owner", 0, 20);
+    Mockito.verify(acspMembersMapper)
+        .daoToDto(
+            argThat(acspMembersDaoPageMatcher(0, 20, 2, 1, Set.of("COM002", "COM010"))),
+            eq(acspData));
+  }
 
-        final var pageRequest = PageRequest.of( 0, 20 );
-        final var page = new PageImpl<>( acspMemberDaos, pageRequest, acspMemberDaos.size() );
+  @Test
+  void fetchAcspMembersAppliesUserIdFilterCorrectly() {
+    final var acspData = testDataManager.fetchAcspDataDaos("COMA001").getFirst();
+    final var acspMemberDaos = testDataManager.fetchAcspMembersDaos("COM002");
 
-        Mockito.doReturn( page ).when( acspMembersRepository ).findAllByAcspNumberUserRolesAndUserIdLike( anyString(), anySet(), anyString(), isNull(), any( Pageable.class ) );
+    final var pageRequest = PageRequest.of(0, 20);
+    final var page = new PageImpl<>(acspMemberDaos, pageRequest, acspMemberDaos.size());
 
-        acspMembersService.fetchAcspMembers( acspData, false, null, "owner", 0, 20 );
-        Mockito.verify( acspMembersMapper ).daoToDto( argThat( acspMembersDaoPageMatcher( 0, 20, 2, 1, Set.of( "COM002", "COM010" ) ) ), eq( acspData ) );
-    }
+    Mockito.doReturn(page)
+        .when(acspMembersRepository)
+        .findAllByAcspNumberUserRolesAndUserIdLike(
+            anyString(), anySet(), anyString(), any(Pageable.class));
 
-    @Test
-    void fetchAcspMembersAppliesUserIdFilterCorrectly(){
-        final var acspData = testDataManager.fetchAcspDataDaos( "COMA001" ).getFirst();
-        final var acspMemberDaos = testDataManager.fetchAcspMembersDaos( "COM002" );
+    acspMembersService.fetchAcspMembers(acspData, true, "COMU002", null, 0, 20);
+    Mockito.verify(acspMembersMapper)
+        .daoToDto(argThat(acspMembersDaoPageMatcher(0, 20, 1, 1, Set.of("COM002"))), eq(acspData));
+  }
 
-        final var pageRequest = PageRequest.of( 0, 20 );
-        final var page = new PageImpl<>( acspMemberDaos, pageRequest, acspMemberDaos.size() );
+  @Test
+  void fetchAcspMembersWithoutFiltersReturnsEverything() {
+    final var acspData = testDataManager.fetchAcspDataDaos("COMA001").getFirst();
+    final var acspMemberDaos =
+        testDataManager.fetchAcspMembersDaos(
+            "COM001", "COM002", "COM003", "COM004", "COM005", "COM006", "COM007", "COM008",
+            "COM009", "COM010", "COM011", "COM012", "COM013", "COM014", "COM015", "COM016");
 
-        Mockito.doReturn( page ).when( acspMembersRepository ).findAllByAcspNumberUserRolesAndUserIdLike( anyString(), anySet(), anyString(), any( Pageable.class ) );
+    final var pageRequest = PageRequest.of(0, 20);
+    final var page = new PageImpl<>(acspMemberDaos, pageRequest, acspMemberDaos.size());
 
-        acspMembersService.fetchAcspMembers( acspData, true, "COMU002", null, 0, 20 );
-        Mockito.verify( acspMembersMapper ).daoToDto( argThat( acspMembersDaoPageMatcher( 0, 20, 1, 1, Set.of( "COM002" ) ) ), eq( acspData ) );
-    }
+    Mockito.doReturn(page)
+        .when(acspMembersRepository)
+        .findAllByAcspNumberUserRolesAndUserIdLike(
+            anyString(), anySet(), anyString(), any(Pageable.class));
 
-    @Test
-    void fetchAcspMembersWithoutFiltersReturnsEverything(){
-        final var acspData = testDataManager.fetchAcspDataDaos( "COMA001" ).getFirst();
-        final var acspMemberDaos = testDataManager.fetchAcspMembersDaos("COM001", "COM002", "COM003", "COM004", "COM005", "COM006", "COM007", "COM008", "COM009", "COM010", "COM011", "COM012", "COM013", "COM014", "COM015", "COM016" );
+    acspMembersService.fetchAcspMembers(acspData, true, null, null, 0, 20);
+    Mockito.verify(acspMembersMapper)
+        .daoToDto(
+            argThat(
+                acspMembersDaoPageMatcher(
+                    0,
+                    20,
+                    16,
+                    1,
+                    Set.of(
+                        "COM001", "COM002", "COM003", "COM004", "COM005", "COM006", "COM007",
+                        "COM008", "COM009", "COM010", "COM011", "COM012", "COM013", "COM014",
+                        "COM015", "COM016"))),
+            eq(acspData));
+  }
 
-        final var pageRequest = PageRequest.of( 0, 20 );
-        final var page = new PageImpl<>( acspMemberDaos, pageRequest, acspMemberDaos.size() );
+  @Test
+  void fetchAcspMembersAppliesPaginationCorrectly() {
+    final var acspData = testDataManager.fetchAcspDataDaos("COMA001").getFirst();
+    final var acspMemberDaos = testDataManager.fetchAcspMembersDaos("COM004", "COM005", "COM006");
 
-        Mockito.doReturn( page ).when( acspMembersRepository ).findAllByAcspNumberUserRolesAndUserIdLike( anyString(), anySet(), anyString(), any( Pageable.class ) );
+    final var pageRequest = PageRequest.of(1, 3);
+    final var page = new PageImpl<>(acspMemberDaos, pageRequest, 16);
 
-        acspMembersService.fetchAcspMembers( acspData, true, null, null, 0, 20 );
-        Mockito.verify( acspMembersMapper ).daoToDto( argThat( acspMembersDaoPageMatcher( 0, 20, 16, 1, Set.of( "COM001", "COM002", "COM003", "COM004", "COM005", "COM006", "COM007", "COM008", "COM009", "COM010", "COM011", "COM012", "COM013", "COM014", "COM015", "COM016" ) ) ), eq( acspData ) );
-    }
+    Mockito.doReturn(page)
+        .when(acspMembersRepository)
+        .findAllByAcspNumberUserRolesAndUserIdLike(
+            anyString(), anySet(), anyString(), any(Pageable.class));
 
-    @Test
-    void fetchAcspMembersAppliesPaginationCorrectly(){
-        final var acspData = testDataManager.fetchAcspDataDaos( "COMA001" ).getFirst();
-        final var acspMemberDaos = testDataManager.fetchAcspMembersDaos( "COM004", "COM005", "COM006" );
+    acspMembersService.fetchAcspMembers(acspData, true, null, null, 1, 3);
+    Mockito.verify(acspMembersMapper)
+        .daoToDto(
+            argThat(acspMembersDaoPageMatcher(1, 3, 16, 6, Set.of("COM004", "COM005", "COM006"))),
+            eq(acspData));
+  }
 
-        final var pageRequest = PageRequest.of( 1, 3 );
-        final var page = new PageImpl<>( acspMemberDaos, pageRequest, 16 );
+  @Test
+  void createAcspMembersWithOwnerRoleWithNullInputsThrowsNullPointerException() {
+    Assertions.assertThrows(
+        NullPointerException.class,
+        () -> acspMembersService.createAcspMembersWithOwnerRole(null, "12345"));
+    Assertions.assertThrows(
+        NullPointerException.class,
+        () -> acspMembersService.createAcspMembersWithOwnerRole("1122334455", null));
+  }
 
-        Mockito.doReturn( page ).when( acspMembersRepository ).findAllByAcspNumberUserRolesAndUserIdLike( anyString(), anySet(), anyString(), any( Pageable.class ) );
+  private ArgumentMatcher<AcspMembersDao> createAcspMembersDaoMatches(
+      final String acspNumber, final String userId, final AcspMembership.UserRoleEnum userRole) {
+    return acspMembersDao -> {
+      final var acspNumberIsCorrect = acspMembersDao.getAcspNumber().equals(acspNumber);
+      final var userIdIsCorrect = acspMembersDao.getUserId().equals(userId);
+      final var userRoleIsCorrect = acspMembersDao.getUserRole().equals(userRole);
+      final var addedAtIsSet = acspMembersDao.getAddedAt() != null;
+      final var etagIsSet = !acspMembersDao.getEtag().isBlank();
+      return acspNumberIsCorrect
+          && userIdIsCorrect
+          && userRoleIsCorrect
+          && addedAtIsSet
+          && etagIsSet;
+    };
+  }
 
-        acspMembersService.fetchAcspMembers( acspData, true, null, null, 1, 3 );
-        Mockito.verify( acspMembersMapper ).daoToDto( argThat( acspMembersDaoPageMatcher( 1, 3, 16, 6, Set.of( "COM004", "COM005", "COM006" ) ) ), eq( acspData ) );
-    }
+  @Test
+  void createAcspMembersWithOwnerRoleWithInputsProvidedSuccessfullyCreatesAcspMembers() {
+    // Given
+    String acspNumber = "1122334455";
+    String userId = "12345";
+    AcspMembership.UserRoleEnum userRole = AcspMembership.UserRoleEnum.OWNER;
 
+    // When
+    acspMembersService.createAcspMembersWithOwnerRole(acspNumber, userId);
+
+    // Then
+    Mockito.verify(acspMembersRepository)
+        .save(argThat(createAcspMembersDaoMatches(acspNumber, userId, userRole)));
+  }
 }
